Update Makefile and create gpio module with callback functions

--- a/gpio_k_modulo/Makefile
+++ b/gpio_k_modulo/Makefile
@@ -1,4 +1,5 @@
 obj-m += gpio_module.o
+obj-m += gpio_module_cb.o
 
 all:
 	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C $(ARM_KERNEL) M=$(PWD) modules
