--- a/gpio_k_modulo/Makefile
+++ b/gpio_k_modulo/Makefile
@@ -1,5 +1,6 @@
 obj-m += gpio_module.o
 obj-m += gpio_module_cb.o
+obj-m += gpio_module_ddc.o
 
 all:
 	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C $(ARM_KERNEL) M=$(PWD) modules
